localization/v3.0.x/site/ru/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  На этой странице представлен список руководств по взаимодействию с Milvus и
  сторонними инструментами.
title: Обзор интеграций
---
<h1 id="Integrations-Overview" class="common-anchor-header">Обзор интеграций<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>На этой странице представлен список руководств по взаимодействию Milvus с инструментами сторонних производителей.</p>
<table>
<thead>
<tr><th>Учебник</th><th>Пример использования</th><th>Партнеры или стеки</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ru/integrate_with_llamaindex.md">RAG с Milvus и LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/ru/integrate_with_langchain.md">RAG с Milvus и LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ru/milvus_hybrid_search_retriever.md">Гибридный поисковый ретривер Milvus в LangChain</a></td><td>Гибридный поиск</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ru/basic_usage_langchain.md">Использование Milvus в качестве хранилища векторов в LangChain</a></td><td>Семантический поиск</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ru/full_text_search_with_langchain.md">Использование полнотекстового поиска с LangChain и Milvus</a></td><td>Полнотекстовый поиск</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ru/integrate_with_haystack.md">RAG с Milvus и Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/ru/llamaindex_milvus_async.md">RAG с Milvus и LlamaIndex Async API</a></td><td>Ochestration</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/ru/milvus_rag_with_vllm.md">Создание RAG с помощью Milvus, vLLM и Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/ru/llamaindex_milvus_full_text_search.md">Использование полнотекстового поиска с помощью LlamaIndex и Milvus</a></td><td>Полнотекстовый поиск</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/ru/dify_with_milvus.md">Развертывание Dify с помощью Milvus</a></td><td>Ochestration</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/ru/rag_with_langflow.md">Создание RAG-системы с использованием Langflow с помощью Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/ru/use_milvus_in_private_gpt.md">Использование Milvus в PrivateGPT</a></td><td>Ochestration</td><td>векторный поиск</td></tr>
<tr><td><a href="/docs/ru/use_milvus_in_docsgpt.md">Использование Milvus в DocsGPT</a></td><td>Очередность</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/ru/use_milvus_with_sambanova.md">Использование Milvus с SambaNova</a></td><td>Orchestration</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/ru/milvus_rag_with_dynamiq.md">Начало работы с Dynamiq и Milvus</a></td><td>Оркестровка</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/ru/llama_stack_with_milvus.md">Построение RAG с помощью стека Llama с Milvus</a></td><td>Оркестрация</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/ru/integrate_with_memgpt.md">Агент чатбота с Milvus и MemGPT</a></td><td>Агент</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/ru/llama_agents_metadata.md">Мультиагентные системы с Mistral AI, Milvus и Llama-agents</a></td><td>Агент</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/ru/quickstart_mem0_with_milvus.md">Начало работы с Mem0 и Milvus</a></td><td>Агенты</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/ru/integrate_with_agno.md">Интеграция Milvus с Agno</a></td><td>Агенты</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/ru/milvus_and_mcp.md">MCP + Milvus: соединение ИИ с векторными базами данных</a></td><td>Агенты</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/ru/openai_agents_milvus.md">Интеграция Milvus с агентами OpenAI: Пошаговое руководство</a></td><td>Агенты</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/ru/integrate_with_ragas.md">Оценка RAG с помощью Ragas и Milvus</a></td><td>Оценка</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/ru/evaluation_with_deepeval.md">Оценка с помощью DeepEval</a></td><td>Оценка и наблюдаемость</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/ru/evaluation_with_phoenix.md">Оценка с помощью Arize Pheonix</a></td><td>Оценка и наблюдаемость</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/ru/integrate_with_langfuse.md">Milvus в Langfuse</a></td><td>Наблюдаемость</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/ru/integrate_with_openai.md">Семантический поиск с помощью Milvus и OpenAI</a></td><td>Семантический поиск</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/ru/integrate_with_cohere.md">Ответы на вопросы с помощью Milvus и Cohere</a></td><td>Семантический поиск</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/ru/integrate_with_hugging-face.md">Ответы на вопросы с использованием Milvus и HuggingFace</a></td><td>Ответы на вопросы</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/ru/integrate_with_pytorch.md">Поиск изображений с использованием Milvus и Pytorch</a></td><td>Семантический поиск</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/ru/integrate_with_sentencetransformers.md">Поиск фильмов с использованием Milvus и SentenceTransfromers</a></td><td>Семантический поиск</td><td>Milvus, SentenceTransformers</td></tr>
<tr><td><a href="/docs/ru/integrate_with_voxel51.md">Поиск по видению с помощью Milvus и FiftyOne</a></td><td>Семантический поиск</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/ru/integrate_with_voyageai.md">Семантический поиск с помощью Milvus и VoyageAI</a></td><td>Семантический поиск</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/ru/integrate_with_bentoml.md">RAG с Milvus и BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/ru/integrate_with_dspy.md">RAG с Milvus и DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/ru/integrate_with_jina.md">Семантический поиск с Milvus и Jina</a></td><td>Семантический поиск</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/ru/integrate_with_snowpark.md">Milvus на контейнерных сервисах Snowpark</a></td><td>Соединение данных</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/ru/integrate_with_whyhow.md">Поиск на основе правил с помощью Milvus и WhyHow</a></td><td>Ответы на вопросы</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/ru/integrate_with_fastgpt.md">Как развернуть FastGPT с помощью Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/ru/integrate_with_vanna.md">Написание SQL с помощью Vanna и Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/ru/integrate_with_camel.md">RAG с Milvus и Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/ru/integrate_with_airbyte.md">Airbyte и Milvus: инфраструктура перемещения данных с открытым исходным кодом</a></td><td>Соединение данных</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/ru/video_search_with_twelvelabs_and_milvus.md">Расширенный поиск видео: Использование Twelve Labs и Milvus для семантического поиска</a></td><td>Семантический поиск</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/ru/kafka-connect-milvus.md">Подключение Kafka к Milvus</a></td><td>Источники данных</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/ru/kotaemon_with_milvus.md">Kotaemon RAG с Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/ru/apify_milvus_rag.md">Генерация с расширением поиска: Поиск сайтов с помощью Apify и сохранение данных в Milvus для ответов на вопросы</a></td><td>Источники данных</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/ru/build_rag_on_arm.md">Построение RAG на архитектуре Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_fireworks.md">Построение RAG с помощью Milvus и Fireworks AI</a></td><td>LLMs</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_lepton.md">Постройте RAG с помощью Milvus и Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_siliconflow.md">Построение RAG с помощью Milvus и SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/ru/rag_with_milvus_and_unstructured.md">Построение RAG с помощью Milvus и неструктурированных</a></td><td>Источники данных</td><td>Milvus, неструктурированные данные</td></tr>
<tr><td><a href="/docs/ru/RAG_with_pii_and_milvus.md">Построение RAG с помощью Milvus + PII Masker</a></td><td>Источники данных</td><td>Milvus, PII Masker</td></tr>
<tr><td><a href="/docs/ru/knowledge_table_with_milvus.md">Таблица знаний с помощью Milvus</a></td><td>Инженерия знаний</td><td>Таблица знаний, Milvus</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_cognee.md">Построение RAG с помощью Milvus и Cognee</a></td><td>Инженерия знаний</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_gemini.md">Построение RAG с помощью Milvus и Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_ollama.md">Построение RAG с помощью Milvus и Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_deepseek.md">Построение RAG с помощью Milvus и DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_crawl4ai.md">Построение RAG с помощью Milvus и Crawl4AI</a></td><td>Источники данных</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_firecrawl.md">Построение RAG с помощью Milvus и Firecrawl</a></td><td>Источники данных</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/ru/integration_with_mindsdb.md">Интеграция Milvus с MindsDB</a></td><td>Инженерия знаний</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_feast.md">Построение RAG с помощью Milvus и Feast</a></td><td>Источники данных</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_docling.md">Построение RAG с помощью Milvus и Docling</a></td><td>Источники данных</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/ru/build_RAG_with_milvus_and_embedAnything.md">Создание RAG с помощью Milvus и EmbedAnything</a></td><td>Встраивание</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/ru/milvus_and_n8n.md">Начало работы с Milvus и n8n</a></td><td>Оркестрация</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/ru/use_milvus_in_anythingllm.md">Использование Milvus в AnythingLLM</a></td><td>Оркестровка</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/ru/NLWeb_with_milvus.md">Использование NLWeb с Milvus</a></td><td>Источники данных</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/ru/langextract_milvus_demo.md">Интеграция LangExtract + Milvus</a></td><td>Источники данных</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Семантический поиск с помощью ZeroEntropy и Milvus</a></td><td>Семантический поиск</td><td>Milvus, ZeroEntropy</td></tr>
<tr><td><a href="/docs/ru/langchain_milvus_dido.md">Интеграция функции встраивания текста Milvus с LangChain</a></td><td>Встраивание текста</td><td>Milvus, LangChain</td></tr>
<tr><td>[Создание агента RAG с двумя источниками данных с помощью Exa и Milvus].</td><td>Источники данных</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
